syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/protocols";

message BackupRequest {
	// 是否需要压缩数据（zlib）
	bool compress = 1;
}

message BackupResponse {
	// 数据库语句
	bytes data = 1;
}
